@@ -127,7 +127,8 @@ extern "C" {
 #define VENDOR_HITACHI 0x1
 #define VENDOR_MAXTOR 0x2
 #define VENDOR_FUJITSU 0x3
-#define VENDOR_IBM 0x4
+#define VENDOR_LTO5 0x5
+#define VENDOR_LTO6 0x6
 
 /* bit flag settings for sdparm_mode_page_item::flags */
 #define MF_COMMON 0x1   /* output in summary mode */
